fix: testing respomsive UX on iPhones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,10 @@ p {
     font-size: 8rem;
 }
 
+#wing-chun-symbols {
+    height: 150px;
+}
+
 .callout-club-name h1 {
     font-size: 3rem;
     border-top: solid 3px white;
@@ -103,7 +107,7 @@ p {
     color: #525252;
 }
 
-.benefits-image {
+#bwc-bt-image {
     width: auto ;
     max-width: 100% ;
     height: auto;
@@ -117,11 +121,10 @@ p {
 }
 
 .hr-benefits-divider {
-    width: 350px;
+    width: 275px;
     height: 3px;
     border: 0;
     background-color: #525252;
-    text-align: center;
 }
 
 .blockquote {
@@ -185,27 +188,61 @@ ul {
 
 /* media querys */
 
-@media screen and (max-width: 768px ){ 
+@media screen and (max-width: 1440px ){ 
     .callout-key-message {
-    padding-top: 12rem;
+    padding-top: 13rem;
     }
 
     .callout-key-message h1 {
-    font-size: 8rem;
+    font-size: 7rem;
     }
 
     .callout-club-name h1 {
     font-size: 3rem;
     }
 
-    .opaque-overlay {
+    #wing-chun-symbols {
+    height: 100px;
+    }
+
+    /* .opaque-overlay {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
     background-color: rgba(0,0,0,0.5);
+    } */
+
+    .btn-container {
+    height: 15vh;
+}
+
+@media screen and (max-width: 770px ){ 
+    .callout-key-message {
+    padding-top: 12rem;
     }
+
+    .callout-key-message h1 {
+    font-size: 7rem;
+    }
+
+    .callout-club-name h1 {
+    font-size: 2.5rem;
+    }
+
+    #wing-chun-symbols {
+    height: 125px;
+    }
+
+    /* .opaque-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.5);
+    } */
 
     .btn-container {
     height: 15vh;
